@@ -1,3 +1,9 @@
+2008-08-26  David Smith  <dsmith@redhat.com>
+
+	* Makefile.am: Moved tar archive creation step from "rpm" target
+	into "dist-gzip" target.
+	* Makefile.in: Regenerated.
+
 2008-08-25  Frank Ch. Eigler  <fche@elastic.org>
 
 	* Makefile.am (AUTOMAKE_OPTIONS): Add "no-dist".  Remove all
